# Autonomous-Path-Planning-and-Maneuvering-of-a-Surface-Vessel

./: INSTALL.md  README.md
guidance_system/: CMakeLists.txt  INSTALL.md  README.md  package.xml
guidance_system/msg/: HybridPathSignal.msg
guidance_system/src/: _plot_utils.py
launching/: CMakeLists.txt  README.md  global_planner.launch  graph_generator.launch  local_planner.launch  main.launch  mapping.launch  package.xml  revcom.launch  revolt.launch
launching/cfg/costmap/: costmap_config.yaml  costmap_config2.yaml
launching/cfg/rviz/: cave.rviz  cave2.rviz  cave3.rviz  freihaus.rviz  global_planner.rviz  ist_floor.rviz  local_planner.rviz  main.rviz  mapping.rviz  roblab.rviz
motion_control_system/: CMakeLists.txt  INSTALL.md  README.md  package.xml
motion_control_system/cfg/: Tuning.cfg
navigation_system/: .gitignore  INSTALL.md  README.md
navigation_system/dyn_config/: CMakeLists.txt  package.xml
navigation_system/dyn_config/cfg/: GlobalTuning.cfg  LocalTuning.cfg
navigation_system/global_planner/: CMakeLists.txt  package.xml
navigation_system/global_planner/src/: global_planner.py
navigation_system/local_planner/: CMakeLists.txt  README.md  package.xml
navigation_system/tuw_msgs/: .gitignore  README.md
navigation_system/tuw_msgs/tuw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
navigation_system/tuw_msgs/tuw_multi_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
navigation_system/tuw_msgs/tuw_multi_robot_msgs/msg/: Graph.msg  Order.msg  OrderArray.msg  OrderPosition.msg  Pickup.msg  RobotGoals.msg  RobotGoalsArray.msg  RobotInfo.msg  Route.msg  RoutePrecondition.msg  RouteProgress.msg  RouteSegment.msg  RouterStatus.msg  Station.msg  StationArray.msg  Vertex.msg
navigation_system/tuw_msgs/tuw_multi_robot_msgs/srv/: StationManagerControlProtocol.srv  StationManagerStationProtocol.srv
rosbags/: README.md  bag_plot.py  env_bag_plot.py
transform_mapping/: CMakeLists.txt  README.md  package.xml
transform_mapping/src/: transform_node_mapping.cpp
(+68 files in other folders)
