<?xml version="1.0"?>
<package format="2">
  <name>tuw_msgs</name>
  <version>0.0.11</version>
  <description>The tuw_msgs meta package</description>

  <maintainer email="george.todoran@tuwien.ac.at">George Todoran</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tuw_airskin_msgs</exec_depend>
  <exec_depend>tuw_gazebo_msgs</exec_depend>
  <exec_depend>tuw_geometry_msgs</exec_depend>
  <exec_depend>tuw_multi_robot_msgs</exec_depend>
  <exec_depend>tuw_nav_msgs</exec_depend>
  <exec_depend>tuw_object_msgs</exec_depend>
  <exec_depend>tuw_vehicle_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
