<?xml version="1.0"?>
<package format="2">
  <name>tuw_multi_robot_msgs</name>
  <version>0.0.11</version>
  <description>The tuw_multi_robot_msgs package contains messages for sending graph, route and sync data over topics.</description>

  <maintainer email="benjamin.binder@tuwien.ac.at">Benjamin Binder</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>


  <license>BSD</license>


  <author email="benjamin.binder@tuwien.ac.at">Benjamin Binder</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <architecture_independent/>
  </export>
</package>
